[package]
name = "bam2bedgraph"
version = "1.0.0"
authors = ["Ben Booth <benwbooth@gmail.com>"]
edition = "2018"

[dependencies]
regex = "*"
structopt = "*"
structopt-derive = "*"
bio = "*"
csv = "1.0.0-beta.5"
itertools = "*"
url = "*"
lazy_static = "*"
serde_derive = "*"
serde_json = "*"
unindent = "*"
futures = "*"
futures-cpupool = "*"
num_cpus = "*"
ordered-float = "*"
duct = "*"
anyhow = "*"

[dependencies.rust-htslib]
git = "https://github.com/rust-bio/rust-htslib.git"

#[profile.dev]
#opt-level = 2
