[package]
name = "bam2bedgraph"
version = "1.0.0"
authors = ["Ben Booth <benwbooth@gmail.com>"]
edition = "2018"

[dependencies]
regex = "*"
structopt = "*"
structopt-derive = "*"
bio = "*"
duct = "*"
eyre = "*"
color-eyre = "*"
rust-htslib = "*"
lazy_static = "*"
lazy-regex = "*"
shell-words = "*"

#[profile.dev]
#opt-level = 2
